--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,15 +1,15 @@
-.normal {
+:local(.normal) {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-.content {
+:local(.content) {
   flex: 1;
   display: flex;
 }
 
-.main {
+:local(.main) {
   padding: 0 8px;
   flex: 1 0 auto;
 }
