--- a/src/pages/invoices/components/TopToolbar.css
+++ b/src/pages/invoices/components/TopToolbar.css
@@ -11,3 +11,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+:local(.baseInfoForm) {
+  padding: 24px;
+  background: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+  margin-bottom: 24px;
+}
